[package]
name = "postgis"
version = "0.9.0"
authors = ["ShuYu Wang <andelf@gmail.com>", "Pirmin Kalberer <pka@sourcepole.ch>"]
description = "An extension to rust-postgres, adds support for PostGIS."
homepage = "https://github.com/andelf/rust-postgis"
repository = "https://github.com/andelf/rust-postgis"
readme = "README.md"
documentation = "https://docs.rs/postgis/"
keywords = ["PostgreSQL", "PostGIS", "GIS", "GEO"]
license = "MIT"
edition = "2018"

[features]
serde = ["dep:serde"]

[dependencies]
postgres-types = "0.2"
byteorder = "1.4"
bytes = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
postgres = "0.19"
serde_json = "1.0"
